--- a/.arcconfig
+++ b/.arcconfig
@@ -1,3 +1,4 @@
 {
-  "phabricator.uri" : "https://phab.qub3d.org/"
+  "phabricator.uri" : "https://phab.qub3d.org/",
+  "repository.callsign" : "D"
 }
